--- a/layouts/partials/footer/index.html
+++ b/layouts/partials/footer/index.html
@@ -3,11 +3,10 @@
                 <!-- Footer -->
                     <footer id="footer">
                         <section>
-                            <form method="post" action="#">
+                            
                                 <form
   action="https://formspree.io/f/xjvqyjeb"
-  method="POST"
->
+  method="POST">
                                 <div class="fields">
                                     <div class="field">
                                         <label for="name">Name</label>
